Wed Nov  8 02:50:59 1995  Theodore Y. Ts'o  <tytso@dcl>

	* encrypt_tk.c (cleanup_scratch): Changed interface to no longer
		require an eblock; we can use our own and figure out the
		enctype from the passed-in key.

	* get_in_tkt.c (krb5_get_in_tkt): Added calls to
		krb5_obtain_padata(). 

	* preauth.c: Completely restructured file to support
		preauthentication. 
		

Fri Oct 27 22:15:33 1995  Theodore Y. Ts'o  <tytso@dcl>

	* get_in_tkt.c (krb5_get_in_tkt): Extensive reworking of the
		structure of this file to make it possible to support
		preauthentication.

Mon Oct 23 17:08:59 1995  Theodore Y. Ts'o  <tytso@dcl>

	* in_tkt_pwd.c (krb5_get_in_tkt_with_password): Fix to properly
		malloc password buffer.

Mon Oct 23 11:09:56 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* rd_req_dec.c (krb5_rd_req_decoded): For heirarchal cross-realm,
		set the length after initializing string.

	* rd_req.c (krb5_rd_req): If a new auth_context is created
		and then there is an error, make sure return pointer is not
		looking at freed memory.

Fri Oct  6 22:04:42 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Remove ##DOS!include of config/windows.in.
		config/windows.in is now included by wconfig.

Fri Sep 29 00:08:53 1995  Theodore Y. Ts'o  <tytso@dcl>

	* gc_via_tkt.c (krb5_get_cred_via_tkt): Only check the returned
		starttime to make sure it matches the requested starttime
		if we requested a postdated ticket.

Thu Sep 28 22:58:53 1995  Theodore Y. Ts'o  <tytso@dcl>

	* conv_princ.c (krb5_425_conv_principal): Only convert instances
		which don't have a '.' in them.  If they have a '.',
		assume that they are fully qualified already.

Thu Sep 28 12:00:00 1995  John Rivlin <jrivlin@fusion.com)

	* gc_via_tkt.c: Cleaned up corrupt ticket error testing to 
		make it more debugable and I think work around a compiler
		bug.

Mon Sep 25 16:57:59 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Removed "foo:: foo-$(WHAT)" lines from the
		Makefile. 
