@@ -26,6 +26,5 @@
 
 #include "k5-int.h"
 
-krb5_deltat krb5_clockskew = 5 * 60;	/* five minutes */
 krb5_cksumtype krb5_kdc_req_sumtype = CKSUMTYPE_RSA_MD5;
 krb5_flags krb5_kdc_default_options = KDC_OPT_RENEWABLE_OK;
